--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Progate</title>
-        <link rel="stylesheet" href="stylesheet.css">
-    </head>
-    <body>
-        <div class="header">
-            <div class="header-logo">Progate</div>
-            <div class="header-list">
-                <ul>
-                    <li>プログラミングとは</li>
-                    <li>学べるレッスン</li>
-                    <li>お問い合わせ</li>
-                </ul>
-            </div>
+<head>
+    <meta charset="UTF-8">
+    <title>Progate</title>
+    <link rel="stylesheet" href="stylesheet.css">
+</head>
+<body>
+    <div class="header">
+        <div class="header-logo">Progate</div>
+        <div class="header-list">
+            <ul>
+                <li>プログラミングとは</li>
+                <li>学べるレッスン</li>
+                <li>お問い合わせ</li>
+            </ul>
         </div>
-        <div class="main">
-            <div class="copy-container">
+    </div>
+    <div class="main">
+        <div class="main-box">
+            <div class="main-catch-copy">
                 <h1>HELLO WORLD<span>.</span></h1>
                 <h2>プログラミングの世界へようこそ</h2>
             </div>
-            <div class="contents">
-                <h3 class="section-title">学べるレッスン</h3>
+        </div>
+        <div class="main-box">
+            <div class="main-contents">
+                <h3>学べるレッスン</h3>
                 <div class="contents-item">
                     <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg">
                     <p>HTML & CSS</p>
@@ -40,25 +43,28 @@
                     <p>Swift</p>
                 </div>
             </div>
-            <div class="contact-form">
-                <h3 class="section-title">お問い合わせ</h3>
+        </div>
+        <div class="main-box">
+            <div class="main-contact-form">
+                <h3>お問い合わせ</h3>
                 <p>メールアドレス(必須)</p>
                 <input>
                 <p>お問い合わせ内容(必須)</p>
                 <textarea></textarea>
                 <p>※必須項目は必ずご入力ください</p>
-                <input class="contact-submit" type="submit" value="送信">
+                <input type="submit" value="送信" class="submit-button">
             </div>
         </div>
-        <div class="footer">
-            <div class="footer-logo">Progate</div>
-            <div class="footer-list">
-                <ul>
-                    <li>会社概要</li>
-                    <li>採用</li>
-                    <li>お問い合わせ</li>
-                </ul>
-            </div>
+    </div>
+    <div class="footer">
+        <div class="footer-logo">Progate</div>
+        <div class="footer-list">
+            <ul>
+                <li>会社概要</li>
+                <li>採用</li>
+                <li>お問い合わせ</li>
+            </ul>
         </div>
-    </body>
+    </div>
+</body>
 </html>
