--- a/index.html
+++ b/index.html
@@ -1,93 +1,96 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="stylesheet.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <title>Progate</title>
-</head>
-<body>
-  <header>
-    <div class="container">
-      <div class="header-left">
-        <img src="https://prog-8.com/images/html/advanced/main_logo.png" class="logo">
-      </div>
-      <div class="header-right">
+  <head>
+    <meta charset="utf-8" />
+    <title>Progate</title>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
+  </head>
+
+  <body>
+    <header>
+      <div class="container">
+        <img
+          class="header-logo"
+          src="https://prog-8.com/images/html/advanced/main_logo.png"
+        />
         <a href="#" class="login">ログイン</a>
       </div>
-    </div>
-  </header>
-  <div class="top-wrapper">
-    <div class="container">
-      <h1>LEARN TO CODE.</h1>
-      <h1>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。</p>
-      <p>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
-      <div class="btn-wrapper">
-        <a href="" class="btn signup">新規登録はこちら</a>
-        <p>or sign up with</p>
-        <a href="#" class="btn facebook">
+    </header>
+    <div class="top-wrapper">
+      <div class="container">
+        <h1>LEARN TO CODE.</h1>
+        <h1>LEARN TO BE CREATIVE.</h1>
+        <p>Progateはオンラインプログラミング学習サービスです。</p>
+        <p>
+          初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。
+        </p>
+        <a href="#" class="btn top-btn signup">新規登録はこちら</a>
+        <p>or</p>
+        <a href="#" class="btn top-btn facebook">
           <i class="fab fa-facebook-f"></i>
           Facebookで登録
         </a>
-        <a href="" class="btn twitter">
+        <a href="#" class="btn top-btn twitter">
           <i class="fab fa-twitter"></i>
           Twitterで登録
         </a>
       </div>
     </div>
-  </div>
-  <div class="lesson-wrapper">
-    <div class="container">
-      <div class="heading">
+    <div class="contents-wrapper">
+      <div class="container">
         <h2>Learn Where to Get Started!</h2>
-      </div>
-      <div class="lessons">
         <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/html.png">
-            <p>HTML & CSS</p>
-          </div>
-          <p class="txt-contents">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
+          <img src="https://prog-8.com/images/html/advanced/html.png" />
+          <p class="icon-title">HTML & CSS</p>
+          <p class="txt-contents">
+            ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。
+          </p>
         </div>
         <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-            <p>jQuery</p>
-          </div>
-          <p class="txt-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。アニメーション効果をつけたり、Ajax(エイジャックス)を使って外部ファイルを読み込んだりと色々なことができます。</p>
+          <img src="https://prog-8.com/images/html/advanced/jQuery.png" />
+          <p class="icon-title">jQuery</p>
+          <p class="txt-contents">
+            素敵な動きを手軽に実装できるJavaScriptライブラリです。
+            アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。
+          </p>
         </div>
         <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/ruby.png">
-            <p>Ruby</p>
-          </div>
-          <p class="txt-contents">オープンソースの動的なプログラミング言語で、シンプルさと高い生産性を備えております。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
+          <img src="https://prog-8.com/images/html/advanced/ruby.png" />
+          <p class="icon-title">Ruby</p>
+          <p class="txt-contents">
+            オープンソースの動的なプログラミング言語で、
+            シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。
+          </p>
         </div>
         <div class="lesson">
-          <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/php.png">
-            <p>PHP</p>
-          </div>
-          <p class="txt-contents">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
+          <img src="https://prog-8.com/images/html/advanced/php.png" />
+          <p class="icon-title">PHP</p>
+          <p class="txt-contents">
+            HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。
+          </p>
         </div>
       </div>
     </div>
-  </div>
-  <div class="message-wrapper">
-    <div class="container">
-      <div class="heading">
+    <div class="message-wrapper">
+      <div class="container">
         <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
         <h3>Let's learn to code, learn to be creative!</h3>
+        <span class="btn dev-btn">さっそく開発する</span>
       </div>
-      <span class="btn message">さっそく開発する</span>
     </div>
-  </div>
-  <footer>
-    <div class="container">
-      <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-      <p>Learn to code, learn to be creative.</p>
-    </div>
-  </footer>
-</body>
+    <footer>
+      <div class="container">
+        <div class="footer-logo">
+          <img src="https://prog-8.com/images/html/advanced/footer_logo.png" />
+          <p>Learn to Code, Learn to be Creative.</p>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
