--- a/index.html
+++ b/index.html
@@ -9,15 +9,10 @@
 
   <body>
     <!-- <h1>タグに"title"というidをつけてください -->
-    <h1 id="title">jQueryの学習項目</h1>
+    <h1 id="title">Progateへようこそ</h1>
 
-    <div class="lessons">
-      <!-- <div>タグに"lesson-item"というclassをつけてください -->
-      <div class="lesson-item">要素を隠す</div>
-
-      <!-- <div>タグに"lesson-item"というclassをつけてください -->
-      <div class="lesson-item">要素を表示する</div>
-    </div>
+    <!-- <img>タグに"image"というidをつけてください -->
+    <img id="image" src="https://prog-8.com/images/html/beginner/wanko.jpg" />
 
     <script src="script.js"></script>
   </body>
