[update]Learn to click event

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
 
   <body>
-    <!-- <h1>タグに"title"というidをつけてください -->
-    <h1 id="title">Progateへようこそ</h1>
+    <!-- 以下の<div>タグに"hide-text"というidをつけてください -->
+    <div id="hide-text" class="btn">説明を隠す</div>
 
-    <!-- <img>タグに"image"というidをつけてください -->
-    <img id="image" src="https://prog-8.com/images/html/beginner/wanko.jpg" />
+    <!-- 以下の<h1>タグに"text"というidをつけてください -->
+    <h1 id="text">Hello, World!</h1>
 
     <script src="script.js"></script>
   </body>
