--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   </head>
 
   <body>
-    <!-- <div>タグに"change-css"というidをつけてください -->
-    <div id="change-css" class="btn">CSSを変更</div>
+    <!-- 1つ目の<div>タグに、"change-text"というidをつけてください -->
+    <div id="change-text" class="btn">文字列を変更</div>
+
+    <!-- 2つ目の<div>タグに、"change-html"というidをつけてください -->
+    <div id="change-html" class="btn">HTMLを変更</div>
 
     <h1 id="text">Hello, World!</h1>
 
