--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
   </head>
 
   <body>
-    <!-- 1つ目の<div>タグに、"change-text"というidをつけてください -->
-    <div id="change-text" class="btn">文字列を変更</div>
-
-    <!-- 2つ目の<div>タグに、"change-html"というidをつけてください -->
-    <div id="change-html" class="btn">HTMLを変更</div>
-
-    <h1 id="text">Hello, World!</h1>
+    <ul>
+      <!-- 以下の<li>タグに"list-item"というclassをつけてください -->
+      <li class="list-item">リスト1</li>
+      <li class="list-item">リスト2</li>
+      <li class="list-item">リスト3</li>
+    </ul>
 
     <script src="script.js"></script>
   </body>
