[update]Learn find and children

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
   </head>
 
   <body>
-    <ul>
-      <!-- 以下の<li>タグに"list-item"というclassをつけてください -->
-      <li class="list-item">リスト1</li>
-      <li class="list-item">リスト2</li>
-      <li class="list-item">リスト3</li>
-    </ul>
+    <!-- "find-method"というidをつけてください -->
+    <div id="find-method" class="btn">findメソッド</div>
+
+    <!-- "children-method"というidをつけてください -->
+    <div id="children-method" class="btn">childrenメソッド</div>
+
+    <div id="wrapper">
+      <a href="#">リンク1</a>
+      <div>
+        <a href="#">リンク2</a>
+      </div>
+    </div>
 
     <script src="script.js"></script>
   </body>
