--- a/index.html
+++ b/index.html
@@ -8,17 +8,11 @@
   </head>
 
   <body>
-    <!-- "find-method"というidをつけてください -->
-    <div id="find-method" class="btn">findメソッド</div>
-
-    <!-- "children-method"というidをつけてください -->
-    <div id="children-method" class="btn">childrenメソッド</div>
-
-    <div id="wrapper">
-      <a href="#">リンク1</a>
-      <div>
-        <a href="#">リンク2</a>
-      </div>
+    <div id="language-wrapper">
+      <h1 class="language-title">jQueryとは?</h1>
+      <p class="language-text">
+        JavaScriptのライブラリの1つです。ユーザーのクリックに反応して表示されるフォームや、アニメーションなど、HTMLとCSSだけでは実現できなかった様々な動きを表現することができます。
+      </p>
     </div>
 
     <script src="script.js"></script>
