--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
         </div>
       </div>
     </header>
-    <!-- "signup-modal"というidをつけてください -->
-    <div id="signup-modal" class="signup-modal-wrapper">
-      <!-- 新規登録用のモーダル部分を表示してください -->
+    <div class="signup-modal-wrapper" id="signup-modal">
       <div class="modal">
+        <!-- モーダルの閉じるボタンのHTMLを貼り付けてください -->
+        <!-- "close-modal"というclassをつけてください -->
+        <div class="close-modal">
+          <i class="fa fa-2x fa-times"></i>
+        </div>
         <div id="signup-form">
           <h2>Emailで新規登録</h2>
           <form action="#">
@@ -49,6 +52,11 @@
     </div>
     <div class="login-modal-wrapper" id="login-modal">
       <div class="modal">
+        <!-- モーダルの閉じるボタンのHTMLを貼り付けてください -->
+        <!-- "close-modal"というclassをつけてください -->
+        <div class="close-modal">
+          <i class="fa fa-2x fa-times"></i>
+        </div>
         <div id="login-form">
           <h2>Emailログイン</h2>
           <form action="#">
@@ -73,7 +81,6 @@
         <p>
           progateはオンラインプログラミング学習サービスです。<br />初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。
         </p>
-        <!-- "signup-show"というclassをつけてください -->
         <div class="btn signup signup-show">新規登録はこちら</div>
         <p>or</p>
         <div class="btn facebook">
@@ -106,7 +113,6 @@
           <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
           <h3 id="tagline">Let's learn to code, learn to be creative!</h3>
         </div>
-        <!-- "signup-show"というclassをつけてください -->
         <div class="btn message signup-show">さっそく開発する</div>
       </div>
     </div>
