--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
     </header>
     <div class="signup-modal-wrapper" id="signup-modal">
       <div class="modal">
-        <!-- モーダルの閉じるボタンのHTMLを貼り付けてください -->
-        <!-- "close-modal"というclassをつけてください -->
         <div class="close-modal">
           <i class="fa fa-2x fa-times"></i>
         </div>
@@ -52,8 +50,6 @@
     </div>
     <div class="login-modal-wrapper" id="login-modal">
       <div class="modal">
-        <!-- モーダルの閉じるボタンのHTMLを貼り付けてください -->
-        <!-- "close-modal"というclassをつけてください -->
         <div class="close-modal">
           <i class="fa fa-2x fa-times"></i>
         </div>
@@ -96,7 +92,51 @@
         <div class="heading">
           <h2>Learn Where to Get Started!</h2>
         </div>
-        <div class="lessons"></div>
+        <div class="lessons">
+          <!-- レッスン一覧部分のHTMLを貼り付けてください -->
+          <!-- lesson-hoverクラスを追加してください -->
+          <div class="lesson lesson-hover">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/html.png" />
+              <p>HTML & CSS</p>
+            </div>
+            <p class="text-contents">
+              ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。
+            </p>
+          </div>
+          <!-- lesson-hoverクラスを追加してください -->
+          <div class="lesson lesson-hover">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/jQuery.png" />
+              <p>jQuery</p>
+            </div>
+            <p class="text-contents">
+              素敵な動きを手軽に実装できるJavaScriptライブラリです。
+              アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。
+            </p>
+          </div>
+          <!-- lesson-hoverクラスを追加してください -->
+          <div class="lesson lesson-hover">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/ruby.png" />
+              <p>Ruby</p>
+            </div>
+            <p class="text-contents">
+              オープンソースの動的なプログラミング言語で、
+              シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。
+            </p>
+          </div>
+          <!-- lesson-hoverクラスを追加してください -->
+          <div class="lesson lesson-hover">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/php.png" />
+              <p>PHP</p>
+            </div>
+            <p class="text-contents">
+              HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。
+            </p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="faq-wrapper">
