[update]Learn to prepare accordion

--- a/index.html
+++ b/index.html
@@ -139,7 +139,35 @@
         <div class="heading">
           <h2>FAQ</h2>
         </div>
-        <div class="faq"></div>
+        <div class="faq">
+          <ul id="faq-list">
+            <li class="faq-list-item">
+              <h3 class="question">Progateの公式キャラクターはなんですか？</h3>
+              <span>+</span>
+              <div class="answer">
+                <p>
+                  にんじゃわんこといいます。忍者の格好をしたわんこです。ネコではありません。
+                </p>
+              </div>
+            </li>
+            <li class="faq-list-item">
+              <h3 class="question">
+                にんじゃわんこはオスですか？それともメスですか？
+              </h3>
+              <span>+</span>
+              <div class="answer">
+                <p>にんじゃわんこはオスです。</p>
+              </div>
+            </li>
+            <li class="faq-list-item">
+              <h3 class="question">にんじゃわんこは何歳ですか？</h3>
+              <span>+</span>
+              <div class="answer">
+                <p>にんじゃわんこは14歳です。</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
     <div class="message-wrapper">
@@ -157,7 +185,6 @@
         <p>Learn to Code,Learn to be Creative.</p>
       </div>
     </footer>
-
     <script src="script.js"></script>
   </body>
 </html>
