--- a/deliverable2/index.html
+++ b/deliverable2/index.html
@@ -10,11 +10,9 @@
   <body>
     <div class="slide-wrapper">
       <h2 class="slide-title">にんじゃわんこの一年</h2>
-      <div class="hide-btn-wrapper">
-        <div class="hide-btn" id="hide-btn">2枚目（梅雨のわんこ）を隠す</div>
-      </div>
       <ul class="slides">
-        <li class="slide">
+        <!-- 一つ目の「.slide」要素のみ、activeというクラスを追加してください -->
+        <li class="slide active">
           <img
             src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/jquery/advanced/spring.jpg"
           />
@@ -35,6 +33,12 @@
           />
         </li>
       </ul>
+      <div class="index-btn-wrapper">
+        <div class="index-btn">1</div>
+        <div class="index-btn" id="second-btn">2</div>
+        <div class="index-btn">3</div>
+        <div class="index-btn">4</div>
+      </div>
     </div>
     <script type="text/javascript" src="script.js"></script>
   </body>
