--- a/deliverable2/index.html
+++ b/deliverable2/index.html
@@ -11,7 +11,6 @@
     <div class="slide-wrapper">
       <h2 class="slide-title">にんじゃわんこの一年</h2>
       <ul class="slides">
-        <!-- 一つ目の「.slide」要素のみ、activeというクラスを追加してください -->
         <li class="slide active">
           <img
             src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/jquery/advanced/spring.jpg"
@@ -35,7 +34,7 @@
       </ul>
       <div class="index-btn-wrapper">
         <div class="index-btn">1</div>
-        <div class="index-btn" id="second-btn">2</div>
+        <div class="index-btn">2</div>
         <div class="index-btn">3</div>
         <div class="index-btn">4</div>
       </div>
