--- a/deliverable2/index.html
+++ b/deliverable2/index.html
@@ -10,6 +10,10 @@
   <body>
     <div class="slide-wrapper">
       <h2 class="slide-title">にんじゃわんこの一年</h2>
+      <div class="change-btn-wrapper">
+        <div class="change-btn prev-btn">← 前へ</div>
+        <div class="change-btn next-btn">次へ →</div>
+      </div>
       <ul class="slides">
         <li class="slide active">
           <img
