--- a/deliverable2/index.html
+++ b/deliverable2/index.html
@@ -27,6 +27,11 @@
         </li>
         <li class="slide">
           <img
+            src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/jquery/advanced/summer.jpg"
+          />
+        </li>
+        <li class="slide">
+          <img
             src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/jquery/advanced/autumn.jpg"
           />
         </li>
@@ -41,6 +46,7 @@
         <div class="index-btn">2</div>
         <div class="index-btn">3</div>
         <div class="index-btn">4</div>
+        <div class="index-btn">5</div>
       </div>
     </div>
     <script type="text/javascript" src="script.js"></script>
