--- a/deliverable3/index.html
+++ b/deliverable3/index.html
@@ -30,6 +30,7 @@
           <div class="form-group">
             <div>キャラクター：</div>
             <select id="select-form" class="select-form">
+              <!-- 上から順に0,1,2,3のvalue属性をつけてください -->
               <option value="0">選択してください</option>
               <option value="1">1. にんじゃわんこ</option>
               <option value="2">2. ひつじ仙人</option>
