--- a/deliverable3/index.html
+++ b/deliverable3/index.html
@@ -30,7 +30,6 @@
           <div class="form-group">
             <div>キャラクター：</div>
             <select id="select-form" class="select-form">
-              <!-- 上から順に0,1,2,3のvalue属性をつけてください -->
               <option value="0">選択してください</option>
               <option value="1">1. にんじゃわんこ</option>
               <option value="2">2. ひつじ仙人</option>
@@ -38,6 +37,7 @@
             </select>
           </div>
           <div class="form-group">
+            <p id="error-message" class="error-message"></p>
             <div>理由：</div>
             <textarea id="text-form" class="text-form"></textarea>
           </div>
