--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <div class="profile">
       <img class="profile-img" src="https://prog-8.com/images/sass/wanko.svg" />
       <!-- ここにコードを書いていきましょう -->
+      <div class="info">
+        <p>にんじゃわんこのホームページです！</p>
+        <p>ぼくの勉強記録を公開しています。</p>
+      </div>
     </div>
     <footer>
       ©︎ ︎Ninjawanko
