--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
     </header>
     <div class="profile">
       <img class="profile-img" src="https://prog-8.com/images/sass/wanko.svg" />
-      <!-- ここにコードを書いていきましょう -->
       <div class="info">
         <p>にんじゃわんこのホームページです！</p>
         <p>ぼくの勉強記録を公開しています。</p>
       </div>
+    </div>
+    <!-- ここにコードを書いていきましょう -->
+    <div class="html">
+      <h4>HTML & CSS</h4>
+      <img src="https://prog-8.com/images/sass/html.svg" />
+    </div>
+    <div class="javascript">
+      <h4>JavaScript</h4>
+      <img src="https://prog-8.com/images/sass/javascript.svg" />
     </div>
     <footer>
       ©︎ ︎Ninjawanko
