[update]Finish comprehensive challenge

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
       <img src="https://prog-8.com/images/sass/javascript.svg" />
       <a href="#">勉強記録をみる</a>
     </div>
+    <!-- ここにrubyを追加してください -->
+    <div class="ruby">
+      <h4>Ruby</h4>
+      <img src="https://prog-8.com/images/sass/ruby.svg" />
+      <a href="#">勉強記録をみる</a>
+    </div>
     <footer>
       ©︎ ︎Ninjawanko
     </footer>
