--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-<!-- <h1>要素で囲んでください -->
-<h1>プログラミングの世界へようこそ</h1>
+<!-- https://prog-8.comへのリンクを作成してください -->
+<a href="https://prog-8.com">Progateへ</a>
 
-<!-- <h2>要素で囲んでください -->
-<h2>Progateとは</h2>
-
-<!-- <p>要素で囲んでください -->
-<p>オンラインのプログラミング学習サービスです</p>
+<!-- https://google.comへのリンクを作成してください -->
+<a href="https://google.com">Googleへ</a>
