--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<!-- リンク先の画像を表示してください -->
-<img src="https://prog-8.com/images/html/beginner/wanko.jpg" />
-
-<!-- リンク先の画像を表示してください -->
-<img src="https://prog-8.com/images/html/beginner/school.jpg" />
+<!-- リストを作成してください -->
+<ul>
+  <li>HTML</li>
+  <li>PHP</li>
+  <li>Ruby</li>
+</ul>
