--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
-<!-- リストを作成してください -->
-<ul>
-  <li>HTML</li>
-  <li>PHP</li>
-  <li>Ruby</li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="stylesheet.css" />
+    <title>Progate</title>
+  </head>
+  <body>
+    <h1>Hello World</h1>
+
+    <p>プログラミングの世界へようこそ</p>
+  </body>
+</html>
