[update]Font size and category

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Progate</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>創れる人になろう</h1>
 
-    <p>プログラミングの世界へようこそ</p>
+    <p>Learn to Code, Learn to be Creative.</p>
   </body>
 </html>
