--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Progate</title>
   </head>
   <body>
-    <h1>創れる人になろう</h1>
+    <h1>Hello World</h1>
 
-    <p>Learn to Code, Learn to be Creative.</p>
+    <img src="https://prog-8.com/images/html/beginner/school.jpg" />
   </body>
 </html>
