[update]Put name to tag

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <title>Progate</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h2>レッスン一覧</h2>
 
-    <img src="https://prog-8.com/images/html/beginner/school.jpg" />
+    <ul>
+      <!-- 1つ目の<li>要素にselectedというclassを与えてください -->
+      <li class="selected">HTML</li>
+      <li>PHP</li>
+      <li>Ruby</li>
+    </ul>
   </body>
 </html>
