[update]HTML whole structure

--- a/index.html
+++ b/index.html
@@ -1,20 +1,8 @@
+<!-- DOCTYPE宣言を追加してください -->
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="stylesheet.css" />
-    <title>Progate</title>
-  </head>
-  <body>
-    <h2>レッスン一覧</h2>
 
-    <ul>
-      <!-- 1つ目の<li>要素にselectedというclassを与えてください -->
-      <li class="selected">HTML</li>
-      <li>PHP</li>
-      <li>Ruby</li>
-    </ul>
-  </body>
+<!-- <html>要素を追加してください -->
+<html>
+  <head></head>
+  <body></body>
 </html>
