[update]HTML whole structure

--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="stylesheet.css" />
-    <title>Progate</title>
-  </head>
-  <body>
-    <h2>レッスン一覧</h2>
+    <!-- 雛形をコピーして、3つの要素を追加してください -->
+    <!--文字コードを「utf-8」にしてください-->
+    <meta charset="utf-8" />
 
-    <ul>
-      <!-- 1つ目の<li>要素にselectedというclassを与えてください -->
-      <li class="selected">HTML</li>
-      <li>PHP</li>
-      <li>Ruby</li>
-    </ul>
-  </body>
+    <!--タイトルを「Progate」にしてください-->
+    <title>Progate</title>
+
+    <!--「stylesheet.css」を読み込んでください-->
+    <link rel="stylesheet" href="stylesheet.css" />
+  </head>
+
+  <body></body>
 </html>
