--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- 雛形をコピーして、3つの要素を追加してください -->
-    <!--文字コードを「utf-8」にしてください-->
     <meta charset="utf-8" />
-
-    <!--タイトルを「Progate」にしてください-->
     <title>Progate</title>
-
-    <!--「stylesheet.css」を読み込んでください-->
     <link rel="stylesheet" href="stylesheet.css" />
   </head>
 
-  <body></body>
+  <body>
+    <!-- <div>要素を追加し、「header」というclassをつけてください -->
+    <div class="header"></div>
+
+    <!-- <div>要素を追加し、「main」というclassをつけてください -->
+    <div class="main"></div>
+
+    <!-- <div>要素を追加し、「footer」というclassをつけてください -->
+    <div class="footer"></div>
+  </body>
 </html>
