[update]Header structure

--- a/index.html
+++ b/index.html
@@ -7,13 +7,22 @@
   </head>
 
   <body>
-    <!-- <div>要素を追加し、「header」というclassをつけてください -->
-    <div class="header"></div>
+    <div class="header">
+      <!-- <div>要素を追加し、「header-logo」というclassをつけてください -->
+      <div class="header-logo">Progate</div>
 
-    <!-- <div>要素を追加し、「main」というclassをつけてください -->
+      <!-- <div>要素を追加し、「header-list」というclassをつけてください -->
+      <div class="header-list">
+        <ul>
+          <li>プログラミングとは</li>
+          <li>学べるレッスン</li>
+          <li>お問い合わせ</li>
+        </ul>
+      </div>
+    </div>
+
     <div class="main"></div>
 
-    <!-- <div>要素を追加し、「footer」というclassをつけてください -->
     <div class="footer"></div>
   </body>
 </html>
