[update]Footer structure

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Progate</title>
     <link rel="stylesheet" href="stylesheet.css" />
   </head>
@@ -20,6 +22,18 @@
 
     <div class="main"></div>
 
-    <div class="footer"></div>
+    <div class="footer">
+      <!-- <div>要素を追加し、「footer-logo」というclassをつけてください -->
+      <div class="footer-logo">Progate</div>
+
+      <!-- <div>要素を追加し、「footer-list」というclassをつけてください -->
+      <div class="footer-list">
+        <ul>
+          <li>会社概要</li>
+          <li>採用</li>
+          <li>お問い合わせ</li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
