[update]Contents structure

--- a/index.html
+++ b/index.html
@@ -19,16 +19,48 @@
     </div>
 
     <div class="main">
-      <!-- <div>要素を追加し、「copy-container」というclassをつけてください -->
       <div class="copy-container">
         <h1>HELLO WORLD<span>.</span></h1>
         <h2>プログラミングの世界へようこそ</h2>
       </div>
 
-      <!-- <div>要素を追加し、「contents」というclassをつけてください -->
-      <div class="contents"></div>
+      <div class="contents">
+        <!-- <h3>要素を追加してください -->
+        <h3>学べるレッスン</h3>
 
-      <!-- <div>要素を追加し、「contact-form」というclassをつけてください -->
+        <!-- <div>要素を追加し、「contents-item」というclassをつけてください -->
+        <div class="contents-item">
+          <img
+            src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg"
+          />
+          <p>HTML & CSS</p>
+        </div>
+
+        <!-- <div>要素を追加し、「contents-item」というclassをつけてください -->
+        <div class="contents-item">
+          <img
+            src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/php.svg"
+          />
+          <p>PHP</p>
+        </div>
+
+        <!-- <div>要素を追加し、「contents-item」というclassをつけてください -->
+        <div class="contents-item">
+          <img
+            src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/ruby.svg"
+          />
+          <p>Ruby</p>
+        </div>
+
+        <!-- <div>要素を追加し、「contents-item」というclassをつけてください -->
+        <div class="contents-item">
+          <img
+            src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/swift.svg"
+          />
+          <p>Swift</p>
+        </div>
+      </div>
+
       <div class="contact-form"></div>
     </div>
 
