--- a/index.html
+++ b/index.html
@@ -25,34 +25,26 @@
       </div>
 
       <div class="contents">
-        <!-- <h3>要素を追加してください -->
-        <h3>学べるレッスン</h3>
-
-        <!-- <div>要素を追加し、「contents-item」というclassをつけてください -->
+        <!-- 以下のh3要素に「section-title」というclassをつけてください -->
+        <h3 class="section-title">学べるレッスン</h3>
         <div class="contents-item">
           <img
             src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg"
           />
           <p>HTML & CSS</p>
         </div>
-
-        <!-- <div>要素を追加し、「contents-item」というclassをつけてください -->
         <div class="contents-item">
           <img
             src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/php.svg"
           />
           <p>PHP</p>
         </div>
-
-        <!-- <div>要素を追加し、「contents-item」というclassをつけてください -->
         <div class="contents-item">
           <img
             src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/ruby.svg"
           />
           <p>Ruby</p>
         </div>
-
-        <!-- <div>要素を追加し、「contents-item」というclassをつけてください -->
         <div class="contents-item">
           <img
             src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/swift.svg"
