[update]Contact form layout

--- a/index.html
+++ b/index.html
@@ -52,7 +52,20 @@
         </div>
       </div>
 
-      <div class="contact-form"></div>
+      <div class="contact-form">
+        <h3 class="section-title">お問い合わせ</h3>
+        <p>メールアドレス（必須）</p>
+        <!-- <input>要素を追加してください -->
+        <input type="text" />
+
+        <p>お問い合わせ内容（必須）</p>
+        <!-- <textarea>要素を追加してください -->
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+
+        <p>※必須項目は必ずご入力ください</p>
+        <!-- <input>要素を追加してください -->
+        <input type="submit" class="contact-submit" value="送信" />
+      </div>
     </div>
 
     <div class="footer">
