--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 
   <body>
     <!-- ここからHTMLを書き始めてください -->
-    <header>
-      <div class="header-logo">
-        <p>Progate</p>
-      </div>
-      <div class="header-list">
-        <ul>
-          <li>プログラミングとは</li>
-          <li>学べるレッスン</li>
-          <li>お問い合わせ</li>
-        </ul>
-      </div>
+    <header class="header">
+      <p class="header-logo">Progate</p>
+      <ul class="header-list">
+        <li class="header-list__item">プログラミングとは</li>
+        <li class="header-list__item">学べるレッスン</li>
+        <li class="header-list__item">お問い合わせ</li>
+      </ul>
     </header>
+    <main class="main">
+      <h1 class="main-title__primary">HELLO WORLD<span>.</span></h1>
+      <h2 class="main-title__secondary">プログラミングの世界へようこそ</h2>
+    </main>
   </body>
 </html>
