[update]Create contents part

--- a/index.html
+++ b/index.html
@@ -19,6 +19,37 @@
     <main class="main">
       <h1 class="main-title__primary">HELLO WORLD<span>.</span></h1>
       <h2 class="main-title__secondary">プログラミングの世界へようこそ</h2>
+      <div class="contents">
+        <h3 class="contents__title">学べるレッスン</h3>
+        <div class="contents__item">
+          <img
+            src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg"
+            alt="HTML & CSS"
+          />
+          <p>HTML & CSS</p>
+        </div>
+        <div class="contents__item">
+          <img
+            src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/php.svg"
+            alt="PHP"
+          />
+          <p>PHP</p>
+        </div>
+        <div class="contents__item">
+          <img
+            src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/ruby.svg"
+            alt="Ruby"
+          />
+          <p>Ruby</p>
+        </div>
+        <div class="contents__item">
+          <img
+            src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/swift.svg"
+            alt="Swift"
+          />
+          <p>Swift</p>
+        </div>
+      </div>
     </main>
   </body>
 </html>
