[update]Create contact form

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1 class="main-title__primary">HELLO WORLD<span>.</span></h1>
       <h2 class="main-title__secondary">プログラミングの世界へようこそ</h2>
       <div class="contents">
-        <h3 class="contents__title">学べるレッスン</h3>
+        <h3 class="heading">学べるレッスン</h3>
         <div class="contents__item">
           <img
             src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg"
@@ -49,6 +49,19 @@
           />
           <p>Swift</p>
         </div>
+      </div>
+      <h3 class="heading">お問い合わせ</h3>
+      <div class="contact">
+        <p class="contact__title">メールアドレス (必須)</p>
+        <input class="contact__area" type="text" />
+        <p class="contact__title">お問い合わせ内容 (必須)</p>
+        <textarea class="contact__area"></textarea>
+        <p class="contact__title">※必須項目は必ずご入力ください</p>
+        <input
+          type="submit"
+          value="送信"
+          class="contact__area contact__submit"
+        />
       </div>
     </main>
   </body>
