[update]Create footer part

--- a/index.html
+++ b/index.html
@@ -64,5 +64,13 @@
         />
       </div>
     </main>
+    <footer class="footer">
+      <p class="footer-logo">Progate</p>
+      <ul class="footer-list">
+        <li class="footer-list__item">会社概要</li>
+        <li class="footer-list__item">採用</li>
+        <li class="footer-list__item">お問い合わせ</li>
+      </ul>
+    </footer>
   </body>
 </html>
